--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,14 @@ html,body{
   flex: 0 1 auto;
 }
 
+.info:disabled {
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+}
+
 .header{
-  height: 105px;
+  height: 95px;
   flex: 0 1 auto;
   background-color: rgb(31, 34, 39);
 }
